# SAVs

./: .gitignore  README.md  comp_run.sh  explore_activations.ipynb  halu_demo.sh  inference_run.sh  model.py  models.py  modif_0.md  optimized_run.sh  optimized_run_natural_ret.sh  per_class_inference_run.sh  per_class_run.sh  preprocess.py  pyproject.toml  results.md  run.py  run.sh  run_all.sh  run_save_all.sh  run_save_all_big.sh  run_save_all_big_blink.sh  run_save_all_trunc.sh  save_run.sh  setup.sh  setup_env.sh  utils.py
analysis/: all_val_benchmarks.csv  breakdown.ipynb  explore_activations.ipynb  get_all_results.py  get_all_results_sklearn.py  get_all_results_sklearn_eurosat.py  lasso_euro_sat.ipynb  lasso_exp.ipynb  utils_analysis.py
comp_data/: comp_data_generation.py  comp_pairs.jsonl  comp_train.jsonl  comp_val.jsonl  comp_val_small.jsonl
data/: MHalubench_test.json  MHalubench_train.json  SC_test.jsonl  blink_Art_Style_test.json  blink_Art_Style_train.json  blink_Counting_test.json  blink_Counting_train.json  blink_Forensic_Detection_test.json  blink_Forensic_Detection_train.json  blink_Functional_Correspondence_test.json  blink_Functional_Correspondence_train.json  blink_IQ_Test_test.json  blink_IQ_Test_train.json  blink_Jigsaw_test.json  blink_Jigsaw_train.json  blink_Multi-view_Reasoning_test.json  blink_Multi-view_Reasoning_train.json  blink_Object_Localization_test.json  blink_Object_Localization_train.json  blink_Relative_Depth_test.json  blink_Relative_Depth_train.json  blink_Relative_Reflectance_test.json  blink_Relative_Reflectance_train.json  blink_Semantic_Correspondence_test.json  blink_Semantic_Correspondence_train.json  blink_Spatial_Relation_test.json  blink_Spatial_Relation_train.json  blink_Visual_Correspondence_test.json  blink_Visual_Correspondence_train.json  blink_Visual_Similarity_test.json  blink_Visual_Similarity_train.json  blink_art_style_test.json  blink_art_style_train.json  eurosat_train.json  naturalbench_ret_test.jsonl  naturalbench_ret_test_truncated20.jsonl  naturalbench_ret_test_truncated5.jsonl  naturalbench_ret_train.jsonl  naturalbench_ret_train_truncated10.jsonl  pets_test.json  (+4 more)
fma_data/: fma_test.jsonl  (+3 more)
(+108 files in other folders)
